--- a/ng-alain/package.json
+++ b/ng-alain/package.json
@@ -46,6 +46,8 @@
     "@delon/theme": "^0.4.0",
     "@ngx-translate/core": "^9.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "abp-ng2-module": "^1.3.0",
+    "abp-web-resources": "^3.1.0",
     "angular-baidu-maps": "^1.0.1",
     "angular-qq-maps": "^1.0.1",
     "angular-split": "^1.0.0-rc.0",
