集成ng-abp-module资源

--- a/ng-alain/src/tsconfig.app.json
+++ b/ng-alain/src/tsconfig.app.json
@@ -13,7 +13,8 @@
         "@testing": [ "testing/" ],
         "@testing/*": [ "testing/*" ],
         "@env": [ "environments/" ],
-        "@env/*": [ "environments/*" ]
+        "@env/*": [ "environments/*" ],
+        "@abp/*": [ "../node_modules/abp-ng2-module/src/*" ]
     }
   },
   "exclude": [
