--- a/ng-alain/package.json
+++ b/ng-alain/package.json
@@ -48,8 +48,17 @@
     "@delon/cache": "^0.6.0-rc.3",
     "@ngx-translate/core": "^9.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "@types/jquery": "^3.2.12",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.2.34",
+    "@types/signalr": "^2.2.33",
+    "@types/toastr": "^2.1.33",
     "abp-ng2-module": "^1.3.0",
     "abp-web-resources": "^3.1.0",
+    "jquery": "^3.1.1",
+    "signalr": "^2.2.1",
+    "toastr": "^2.1.2",
+    "sweetalert": "^1.1.3",
     "angular-baidu-maps": "^1.0.1",
     "angular-qq-maps": "^1.0.1",
     "angular-split": "^1.0.0-rc.0",
