--- a/ng-alain/tsconfig.json
+++ b/ng-alain/tsconfig.json
@@ -24,7 +24,8 @@
         "@testing": [ "testing/" ],
         "@testing/*": [ "testing/*" ],
         "@env": [ "environments/" ],
-        "@env/*": [ "environments/*" ]
+        "@env/*": [ "environments/*" ],
+        "@abp/*": [ "../node_modules/abp-ng2-module/src/*" ]
     }
   }
 }
